<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoHelm</string>
    <string name="menu_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="tack_starboard">Tack Star</string>
    <string name="tack_port">Tack Port</string>
    <string name="increment_heading">+1 degree</string>
    <string name="decrement_heading">-1 degree</string>
    <string name="pause_autohelm">pause</string>
    <string name="compass_description">View the boat heading</string>
    <string name="statusText">Welcome</string>
    <color name="black">#000000</color>
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_not_connected">Not Connected</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_connected_to">Connected to</string>

</resources>